mule-management-console/v/3.2/monitoring-a-cluster.adoc
= *[mmc:Mule 3.2]* Monitoring a Cluster

You can use the management console to monitor the status of a cluster and get detailed information about a cluster such as which flows and services are running or stopped, and determine memory usage.

== Determining Cluster Status

Click the Servers tab. A color-coded status icon in the All servers pane lets you quickly determine whether all, some, or none of the nodes in a cluster are running.

* All cluster nodes are operational - If all nodes in the cluster are running, the cluster status appears as a green icon.
+
image:/documentation-3.2/download/attachments/51053744/normal_cluster_status_greeen.png?version=1&modificationDate=1315603649973[image]
+

* Some cluster nodes are operational - The status icon is orange if some but not all nodes in the cluster are running.
+
image:/documentation-3.2/download/attachments/51053744/partially_disable_cluster_status_orange.png?version=1&modificationDate=1315603649983[image]
+

* No cluster nodes are operational - The status icon is red if none of the nodes in a cluster are running.
+
image:/documentation-3.2/download/attachments/51053744/disabled_cluster_status_red.png?version=1&modificationDate=1315603649992[image]


== Getting Details About a Cluster

Click a Cluster in the All servers pane to get details about that cluster.

image:/documentation-3.2/download/attachments/51053744/get_cluster_details.png?version=1&modificationDate=1315603649964[image]


This opens the Cluster Details pane from which you can get cluster node details, cluster metrics, and status information about deployments to the cluster.

=== Cluster Node Details in the Dashboard Tab

image:/documentation-3.2/download/attachments/51053744/cluster_details_pane.png?version=1&modificationDate=1315603649950[image]

The Dashboard tab in the Cluster Details pane provides overview information about the cluster as well as a Nodes Control and Cluster Metrics portlet. The overview information includes the date and time the cluster was last started. It also lists any groups to which the the cluster was assigned.

The Nodes Control portlet lists the nodes in the cluster. The color-coded status icon next to the node indicates its status (green: operational, red: not operational). You can stop or restart a node by clicking its check box and then clicking the Stop or Restart button in the portlet. The Restart and Stop buttons are enabled in the portlet when you check the check box for a node.

image:/documentation-3.2/download/attachments/51053744/cluster_details_restart_stop.png?version=1&modificationDate=1315603714348[image]

The Cluster Metrics portlet tracks JVM memory usage, CPU memory usage, and OS Swap usage for each node in the cluster.

=== Deployment and Application Status in the Applications Tab

The Applications tab in the Cluster Details pane provides a Deployment Status portlet and a Cluster Application Status portlet.

image:/documentation-3.2/download/attachments/51053744/cluster_application_details.png?version=1&modificationDate=1315603714358[image]

The Deployment Status portlet displays the status of all deployments to the cluster.

The Cluster Application Status portlet displays the status of individual applications deployed to the cluster. You can start, restart, or stop an application by clicking its check box and then clicking the Start, Restart, or Stop buttons in the portlet.

The Deployment Status and Cluster Application Status portlets are also available in the management console dashboard.

=== Cluster Alerts

You can also monitor the availability status of the nodes in a cluster by creating a server up or server down alert for a cluster. Create the alert as described in link:/documentation-3.2/display/32X/Defining+SLAs+and+Alerts#DefiningSLAsandAlerts-DefiningSLAsandAlertsCreatinganAlertDefinition[Creating an Alert Definition] and select the cluster in the Server or Group field.

image:/documentation-3.2/download/attachments/51053744/cluster_alert.png?version=1&modificationDate=1315603714375[image]

If you create a server down alert for the cluster, an alert is raised if any node in the cluster goes down. If you create a server up alert for the cluster, an alert is raised if any node in the cluster goes back up.

image:/documentation-3.2/download/attachments/51053744/cluster_alert_raised.png?version=1&modificationDate=1315603714336[image]

link:/documentation-3.2/display/32X/Deploying%2C+Redeploying%2C+or+Undeploying+an+Application+To+or+From+a+Cluster[<< Previous: *Deploying, Redeploying, or Undeploying an Application To or From a Cluster*]

link:/documentation-3.2/display/32X/Reliability+Patterns[Next: *Reliability Patterns* >>]
