mule-management-console/v/3.6/monitoring-a-cluster.adoc
= Monitoring a Cluster
:keywords: mmc, clusters, debug, monitoring

You can use the management console to monitor the status of a cluster and get detailed information about a cluster such as which flows are running or stopped, and determine memory usage.

== Determining Cluster Status

Click the Servers tab. A color-coded status icon in the All servers pane lets you quickly determine whether all, some, or none of the nodes in a cluster are running.

* All cluster nodes are operational - If all nodes in the cluster are running, the cluster status appears as a green icon. +
 image:normal_cluster_status_greeen.png[normal_cluster_status_greeen]

* Some cluster nodes are operational - The status icon is orange if some but not all nodes in the cluster are running. +
 image:partially_disable_cluster_status_orange.png[partially_disable_cluster_status_orange]

* No cluster nodes are operational - The status icon is red if none of the nodes in a cluster are running. +
 image:disabled_cluster_status_red.png[disabled_cluster_status_red]

== Getting Details About a Cluster

Click a Cluster in the All servers pane to get details about that cluster.

image:get_cluster_details.png[get_cluster_details]

This opens the Cluster Details pane from which you can get cluster node details, cluster metrics, and status information about deployments to the cluster.

=== Cluster Node Details in the Dashboard Tab

image:cluster_details_pane.png[cluster_details_pane]

The Dashboard tab in the Cluster Details pane provides overview information about the cluster as well as a Nodes Control and Cluster Metrics portlet. The overview information includes the date and time the cluster was last started. It also lists any groups to which the the cluster was assigned.

The Nodes Control portlet lists the nodes in the cluster. The color-coded status icon next to the node indicates its status (green: operational, red: not operational). You can stop or restart a node by clicking its check box and then clicking the Stop or Restart button in the portlet. The Restart and Stop buttons are enabled in the portlet when you check the check box for a node.

image:cluster_details_restart_stop.png[cluster_details_restart_stop]

The Cluster Metrics portlet tracks JVM memory usage, CPU memory usage, and OS Swap usage for each node in the cluster.

=== Deployment and Application Status in the Applications Tab

The Applications tab in the Cluster Details pane provides a Deployment Status portlet and a Cluster Application Status portlet.

image:cluster_application_details.png[cluster_application_details]

The Deployment Status portlet displays the status of all deployments to the cluster.

The Cluster Application Status portlet displays the status of individual applications deployed to the cluster. You can start, restart, or stop an application by clicking its check box and then clicking the Start, Restart, or Stop buttons in the portlet.

The Deployment Status and Cluster Application Status portlets are also available in the management console dashboard.

=== Cluster Alerts

You can also monitor the availability status of the nodes in a cluster by creating a server up or server down alert for a cluster. Create the alert as described in Creating an Alert Definition and select the cluster in the Server or Group field.

image:cluster_alert.png[cluster_alert]

If you create a server down alert for the cluster, an alert is raised if any node in the cluster goes down. If you create a server up alert for the cluster, an alert is raised if any node in the cluster goes back up.

image:cluster_alert_raised.png[cluster_alert_raised]

[NOTE]
====
Not all alert types are available for clusters. Only the following can be used:

* JMX Attribute
* Log Regex
* Server Down
* Server Up
* URL Health
====
